--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="sikuli-api-1.0.2-standalone.jar" sourcepath="sikuli-api-1.0.2-standalone.jar"/>
+	<classpathentry kind="lib" path="slf4j-nop-1.7.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
