--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="sikuli-api-1.0.2-standalone.jar" sourcepath="sikuli-api-1.0.2-standalone.jar"/>
 	<classpathentry kind="lib" path="slf4j-nop-1.7.5.jar"/>
+	<classpathentry kind="lib" path="jsoup-1.7.2.jar" sourcepath="jsoup-1.7.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
